--- a/.github/workflows/kernel_notification_manual_push_trigger.yml
+++ b/.github/workflows/kernel_notification_manual_push_trigger.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Build with Maven
         run: |
-          cd registration-processor
+          cd kernel
           mvn -B package -s $GITHUB_WORKSPACE/settings.xml -DskipTests -Dgpg.skip=true --file pom.xml
 
       - name: Ready the springboot artifacts
